# kowalski

./: .dockerignore  .gitignore  .lychee.toml  AGENT.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DIARY.md  FEATURES.md  LICENSE  README.md  ROADMAP.md  TODO.md  config.toml  deny.toml  input.txt  justfile  memory_architecture.md  task.md
.cargo/: config.toml
.github/workflows/: ci.yml
benchmark/: benchmark_plan.md
benchmark/scenario1_simple_llm_call/: Cargo.toml  build.sh  requirements.txt  run.sh  run_kowalski.rs  run_langchain.py
benchmark/scenario2_single_tool_use/: Cargo.toml  build.sh  example.txt  requirements.txt  run.sh  run_kowalski.rs  run_langchain.py
benchmark/scenario3_memory_retrieval/: Cargo.toml  build.sh  requirements.txt  run.sh  run_kowalski.rs  run_langchain.py
benchmark/scenario4_csv_analysis/: Cargo.toml  build.sh  requirements.txt  run.sh  run_kowalski.rs  run_langchain.py
benchmark/scenario4_csv_analysis.disabled/: Cargo.toml  run_langchain.py
docs/: DESIGN_MEMORY_AND_DEPENDENCIES.md  GOVERNANCE.md  OVERVIEW_1_1.md  README.md  architecture.html  architecture_v02.md  architecture_v03_future.md  architeture.mermaid  articel_tooling.md  article_05.md  article_data1.md  article_memory.md  article_tooling.md  key_technology.md  memory_architecture.md  roadmap.html  use_cases.md
docs/img/: architecture_v01.excalidraw  architecture_v02.excalidraw  architecture_v03-future.excalidraw  components_v01.excalidraw  tooling_v01.pptx
docs/purgatory/: README.md  index.html  legacy_v1.1.0.md  modules.html
examples/: README.md  academic_research.rs  general_chat.rs  model_manager.rs  unified.rs  web_dynamic.rs  web_research.rs  web_search.rs  web_static.rs
examples/knowledge-compiler/: README.md  horde.md  main-agent.md
kowalski/: AGENT.md  AGENTS.md  Cargo.toml  README.md
kowalski-academic-agent/: AGENT.md  AGENTS.md  Cargo.toml  README.md
kowalski-academic-agent/examples/: research_paper_analysis.rs
kowalski-academic-agent/src/: agent.rs  config.rs  error.rs  lib.rs  tools.rs
kowalski-agent-template/: Cargo.toml  README.md
kowalski-agent-template/src/: agent.rs  builder.rs  config.rs  default.rs  lib.rs  tools.rs
kowalski-agent-template/src/templates/: general.rs  mod.rs  research.rs
kowalski-cli/: AGENT.md  AGENTS.md  Cargo.toml  PACKAGING.md  README.md  ROADMAP.md
kowalski-cli/src/: agent_app_ops.rs  config.rs  error.rs  extension_ops.rs  federation_ops.rs  http_api.rs  input_assets.rs  interactive.rs  lib.rs  main.rs  ops.rs  run_ops.rs
kowalski-cli/src/cli/: academic.rs  commands.rs  interactive.rs  mod.rs  web.rs
kowalski-code-agent/: AGENT.md  AGENTS.md  Cargo.toml  README.md
kowalski-code-agent/examples/: code_analysis.rs  java_analysis.rs  python_analysis.rs  rust_analysis.rs
kowalski-code-agent/src/: agent.rs  analyzer.rs  config.rs  documentation.rs  error.rs  lib.rs  parser.rs  refactor.rs  tools.rs
kowalski-core/: AGENT.md  AGENTS.md  Cargo.toml  MEMORY_ARCHITECTURE.md  README.md  ROADMAP.md
kowalski-core/src/: config.rs  error.rs  graph.rs  lib.rs  tool_chain.rs  tools.rs
kowalski-core/src/agent/: mod.rs  repl_trace.rs  types.rs
kowalski-core/src/conversation/: mod.rs
kowalski-core/src/db/: mod.rs
kowalski-core/src/federation/: acl.rs  broker.rs  mod.rs  orchestrator.rs  persist.rs  pg_broker.rs  registry.rs
kowalski-core/src/llm/: mod.rs  ollama.rs  openai.rs  provider.rs
kowalski-core/src/logging/: mod.rs
kowalski-core/src/mcp/: client.rs  hub.rs  mod.rs  stdio.rs  tool.rs  types.rs
kowalski-core/src/memory/: consolidation.rs  episodic.rs  helpers.rs  mod.rs  semantic.rs  semantic_pg.rs  tests.rs  working.rs
kowalski-core/src/model/: mod.rs
kowalski-core/src/role/: mod.rs
kowalski-core/src/template/: agent.rs  builder.rs  config.rs  default.rs  mod.rs
kowalski-core/src/tools/: manager.rs  mod.rs
kowalski-core/src/utils/: json.rs
kowalski-core/tests/: age_cypher_integration.rs  mcp_client_http_mock.rs  postgres_integration.rs
kowalski-data-agent/: AGENT.md  AGENTS.md  Cargo.toml  README.md
kowalski-data-agent/examples/: csv_analysis.rs
kowalski-data-agent/src/: agent.rs  config.rs  lib.rs  tools.rs
kowalski-federation/: AGENT.md  AGENTS.md  Cargo.toml  README.md
kowalski-federation/src/: agent.rs  error.rs  lib.rs  message.rs  orchestrator.rs  registry.rs
kowalski-federation/src/tests/: mod.rs
kowalski-mcp-datafusion/: AGENTS.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  docker-compose.yml
kowalski-mcp-datafusion/fixtures/: sample.csv
kowalski-mcp-datafusion/src/: lib.rs  main.rs
kowalski-mcp-datafusion/tests/: mcp_http_smoke.rs
kowalski-memory/: Cargo.toml  README.md
kowalski-memory/src/: consolidation.rs  episodic.rs  lib.rs  semantic.rs  working.rs
kowalski-tools/: AGENT.md  AGENTS.md  Cargo.toml  README.md
kowalski-tools/src/: code.rs  data.rs  fs.rs  lib.rs  tool.rs
kowalski-tools/src/document/: mod.rs  pdf.rs
kowalski-tools/src/tests/: mod.rs
kowalski-tools/src/web/: mod.rs  scrape.rs  search.rs
kowalski-web-agent/: AGENT.md  AGENTS.md  Cargo.toml  README.md
kowalski-web-agent/examples/: tool_calling_demo.rs  web_research.rs
kowalski-web-agent/src/: agent.rs  config.rs  error.rs  lib.rs  tools.rs
kowalski/src/: horde.rs  http_api.rs  http_ops.rs  lib.rs  main.rs
migrations/legacy_prompts/: README.md  academic_config.rs.example  academic_system_prompt.txt  code_system_prompt.txt  data_system_prompt.txt  federation_types.rs  web_system_prompt.txt
migrations/postgres/: 001_initial_schema.sql  002_episodic_kv.sql  003_semantic_memory.sql  004_federation_registry.sql
migrations/sqlite/: 001_initial.sql  002_episodic_kv.sql
resources/: tokenizer_config.json  tokens.md
scripts/: docs-linkcheck.sh
src/: agent.rs  config.rs  conversation.rs  lib.rs  main.rs  model.rs  pdf_reader.rs  role.rs
src/agent/: academic.rs  error.rs  general.rs  mod.rs  tooling.rs  (+2 more)
tools/: rust_coding_conventions.md
ui/: .gitignore  AGENTS.md  DEPLOY.md  README.md  ROADMAP.md  index.html  package.json  tsconfig.json  vite.config.ts
(+59 files in other folders)
