[workspace]
members = [
    "kowalski-core",
    "kowalski-agent-template",
    "kowalski-tools",
    "kowalski-academic-agent",
    "kowalski-web-agent",
    "kowalski-code-agent",
    "kowalski-cli"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
log = "0.4"
thiserror = "1.0"
futures = "0.3"
bytes = "1.5"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.0"
regex = "1.10"
markdown = "0.3"
env_logger = "0.11"

[package]
name = "kowalski"
version = "0.3.0"
edition = "2024"
description = "A Rust-based agent for interacting with Ollama models"
license = "MIT"
authors = ["yarenty <yarenty@gmail.com>"]
repository = "https://github.com/yarenty/kowalski"
homepage = "https://github.com/yarenty/kowalski"
readme = "README.md"
categories = [
    "api-bindings",
    "asynchronous",
    "network-programming",
    "text-processing",
    "science"
]
keywords = [
    "AI",
    "agent",
    "chat",
    "llm",
    "ollama"
]

[features]
default = []
web = ["kowalski-web-agent"]
academic = ["kowalski-academic-agent"]
code = ["kowalski-code-agent"]
all = ["web", "academic", "code"]

[dependencies]
kowalski-core = { path = "kowalski-core" }
kowalski-agent-template = { path = "kowalski-agent-template" }
kowalski-tools = { path = "kowalski-tools" }
kowalski-cli = { path = "kowalski-cli" }
kowalski-web-agent = { path = "kowalski-web-agent", optional = true }
kowalski-academic-agent = { path = "kowalski-academic-agent", optional = true }
kowalski-code-agent = { path = "kowalski-code-agent", optional = true }
reqwest = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }

# Dependencies for config and dirs
toml = "0.8"
config = "0.15"
dirs = "6.0"
regex = { workspace = true }
