[workspace]
resolver = "3"
members = [
    "kowalski",
    "kowalski-core",
    "kowalski-tools",
    "kowalski-academic-agent",
    "kowalski-web-agent",
    "kowalski-code-agent",
    "kowalski-data-agent",
    "kowalski-federation",
    "kowalski-cli"
]


[workspace.package]
version = "0.6.0"
edition = "2024"
description = "A Rust-based agent for interacting with Ollama models"
license = "MIT"
authors = ["yarenty <yarenty@gmail.com>"]
repository = "https://github.com/yarenty/kowalski"
homepage = "https://github.com/yarenty/kowalski"
readme = "README.md"
categories = [
    "api-bindings",
    "asynchronous",
    "network-programming",
    "text-processing",
    "science"
]
keywords = [
    "AI",
    "agent",
    "chat",
    "llm",
    "ollama"
]


[workspace.dependencies]
# Core async/runtime dependencies
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
futures = "0.3"

# Core serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Core time and date handling
chrono = "0.4"

# Core error handling
thiserror = "2.0"

# Core logging and tracing
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.11"

# Core utilities
url = "2.5.0"
regex = "1.10"
markdown = "1.0"
bytes = "1.5"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# Config and directory handling
toml = "0.8"
config = "0.15"
dirs = "6.0"

# Optional dependencies
uuid = { version = "1", features = ["v4", "serde"] }
