[package]
name = "kowalski-academic-agent"
version = "0.3.0"
edition = "2024"
authors = ["yarenty <yarenty@gmail.com>"]
license = "MIT"
description = "Kowalski - agent of future AI"
repository = "https://github.com/yarenty/kowalski"
homepage = "https://github.com/yarenty/kowalski"
readme = "README.md"

[dependencies]
kowalski-core = { path = "../kowalski-core" }
kowalski-agent-template = { path = "../kowalski-agent-template" }
tokio = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
markdown = { workspace = true }
env_logger = { workspace = true }
kowalski-tools = { path = "../kowalski-tools" }

[[example]]
name = "research_paper_analysis"
path = "examples/research_paper_analysis.rs"