[package]
name = "kowalski-academic-agent"
version = {workspace = true}
edition = {workspace = true}
authors = {workspace = true}
license = {workspace = true}
readme = "README.md"

[dependencies]
kowalski-core = { path = "../kowalski-core", version = "0.5.0" }
kowalski-agent-template = { path = "../kowalski-agent-template", version = "0.5.0" }
tokio = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
markdown = { workspace = true }
env_logger = { workspace = true }
kowalski-tools = { path = "../kowalski-tools", version = "0.5.0" }

[[example]]
name = "research_paper_analysis"
path = "examples/research_paper_analysis.rs"