[package]
name = "kowalski-cli"
version = {workspace = true}
edition = {workspace = true}
authors = {workspace = true}
license = {workspace = true}
readme = "README.md"

[dependencies]
kowalski-core = { path = "../kowalski-core", version = "0.5.0" }
kowalski-agent-template = { path = "../kowalski-agent-template", version = "0.5.0" }
kowalski-tools = { path = "../kowalski-tools", version = "0.5.0" }
kowalski-federation = { path = "../kowalski-federation", version = "0.5.0" }
kowalski-academic-agent = { path = "../kowalski-academic-agent", version = "0.5.0" }
kowalski-data-agent = { path = "../kowalski-data-agent", version = "0.5.0", optional = true }
kowalski-code-agent = { path = "../kowalski-code-agent", version = "0.5.0" }
kowalski-web-agent = { path = "../kowalski-web-agent", version = "0.5.0" }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3" }
env_logger = "0.11"
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
markdown = { workspace = true }

[features]
default = []
data = ["kowalski-data-agent"]
