[package]
name = "kowalski-cli"
version = "0.5.2"
edition = "2024"
description = "Kowalski CLI Interface: A Rust-based agent for interacting with Ollama models"
license = "MIT"
authors = ["yarenty <yarenty@gmail.com>"]
repository = "https://github.com/yarenty/kowalski"
homepage = "https://github.com/yarenty/kowalski"
readme = "README.md"
categories = [
    "network-programming",
    "text-processing",
    "science",
]
keywords = [
    "AI",
    "agent",
    "chat",
    "llm",
    "ollama",
]

[dependencies]
kowalski-core = { path = "../kowalski-core", version = "0.5.2" }
kowalski-agent-template = { path = "../kowalski-agent-template", version = "0.5.2" }
kowalski-tools = { path = "../kowalski-tools", version = "0.5.2" }
kowalski-federation = { path = "../kowalski-federation", version = "0.5.2" }
kowalski-academic-agent = { path = "../kowalski-academic-agent", version = "0.5.2" }
kowalski-data-agent = { path = "../kowalski-data-agent", version = "0.5.2" }
kowalski-code-agent = { path = "../kowalski-code-agent", version = "0.5.2" }
kowalski-web-agent = { path = "../kowalski-web-agent", version = "0.5.2" }
kowalski-memory = { path = "../kowalski-memory", version = "0.5.2" }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3" }
env_logger = "0.11"
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
markdown = { workspace = true }

