[package]
name = "kowalski-cli"
version = "0.6.0"
edition = "2024"
description = "Kowalski CLI Interface: A Rust-based agent for interacting with Ollama models"
license = "MIT"
authors = ["yarenty <yarenty@gmail.com>"]
repository = "https://github.com/yarenty/kowalski"
homepage = "https://github.com/yarenty/kowalski"
readme = "README.md"
categories = [
    "network-programming",
    "text-processing",
    "science",
]
keywords = [
    "AI",
    "agent",
    "chat",
    "llm",
    "ollama",
]

[features]
default = []
postgres = ["kowalski-core/postgres"]

[dependencies]
kowalski-core = { path = "../kowalski-core", version = "0.6.0" }


chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3" }
env_logger = "0.11"
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
url = { workspace = true }
regex = { workspace = true }
markdown = { workspace = true }
rustyline = "13.0"
colored = "2.1"
toml = "0.8"

