[package]
name = "kowalski-code-agent"
version = "0.3.0"
edition = "2024"
authors = ["yarenty <yarenty@gmail.com>"]
license = "MIT"
description = "Kowalski - agent of future AI"
repository = "https://github.com/yarenty/kowalski"
homepage = "https://github.com/yarenty/kowalski"
readme = "README.md"

[dependencies]
kowalski-core = { path = "../kowalski-core" }
kowalski-agent-template = { path = "../kowalski-agent-template" }
tokio = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
markdown = { workspace = true }
env_logger = { workspace = true }

[features]
default = []
all-languages = ["rust", "python", "javascript", "typescript", "java", "cpp", "go", "ruby", "php", "c-sharp", "scala"]
rust = ["tree-sitter-rust"]
python = ["tree-sitter-python"]
javascript = ["tree-sitter-javascript"]
typescript = ["tree-sitter-typescript"]
java = ["tree-sitter-java"]
cpp = ["tree-sitter-cpp"]
go = ["tree-sitter-go"]
ruby = ["tree-sitter-ruby"]
php = ["tree-sitter-php"]
c-sharp = ["tree-sitter-c-sharp"]
scala = ["tree-sitter-scala"]

[dependencies.tree-sitter]
version = "0.23"
optional = true

[dependencies.tree-sitter-rust]
version = "0.23"
optional = true

[dependencies.tree-sitter-python]
version = "0.23"
optional = true

[dependencies.tree-sitter-javascript]
version = "0.23"
optional = true

[dependencies.tree-sitter-typescript]
version = "0.23"
optional = true

[dependencies.tree-sitter-java]
version = "0.23"
optional = true

[dependencies.tree-sitter-cpp]
version = "0.23"
optional = true

[dependencies.tree-sitter-go]
version = "0.23"
optional = true

[dependencies.tree-sitter-ruby]
version = "0.23"
optional = true

[dependencies.tree-sitter-php]
version = "0.23"
optional = true

[dependencies.tree-sitter-c-sharp]
version = "0.23"
optional = true

[dependencies.tree-sitter-scala]
version = "0.23"
optional = true

[[example]]
name = "code_analysis"
path = "examples/code_analysis.rs"