[package]
name = "kowalski-code-agent"
version = "0.6.0"
edition = "2024"
description = "Kowalski Code Agent: A Rust-based agent for interacting with Ollama models"
license = "MIT"
authors = ["yarenty <yarenty@gmail.com>"]
repository = "https://github.com/yarenty/kowalski"
homepage = "https://github.com/yarenty/kowalski"
readme = "README.md"
categories = [
    "network-programming",
    "text-processing",
    "science",
]
keywords = [
    "AI",
    "agent",
    "chat",
    "llm",
    "ollama",
]

[dependencies]
kowalski-core = { path = "../kowalski-core", version = "0.6.0" }
kowalski-tools = { path = "../kowalski-tools", version = "0.6.0" }
tokio = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
markdown = { workspace = true }
env_logger = { workspace = true }

[[example]]
name = "code_analysis"
path = "examples/code_analysis.rs"

[[example]]
name = "java_analysis"
path = "examples/java_analysis.rs"

[[example]]
name = "python_analysis"
path = "examples/python_analysis.rs"

[[example]]
name = "rust_analysis"
path = "examples/rust_analysis.rs"