[package]
name = "kowalski-core"
version = "0.6.0"
edition = "2024"
description = "Kowalski Core Module: A Rust-based agent for interacting with Ollama models"
license = "MIT"
authors = ["yarenty <yarenty@gmail.com>"]
repository = "https://github.com/yarenty/kowalski"
homepage = "https://github.com/yarenty/kowalski"
readme = "README.md"
categories = [
    "network-programming",
    "text-processing",
    "science",
]
keywords = [
    "AI",
    "agent",
    "chat",
    "llm",
    "ollama",
]


[dependencies]
async-trait = {workspace = true}
futures = {workspace = true}
serde = { workspace= true,features = ["derive"] }
serde_json = {workspace = true}
reqwest = {workspace = true }
tokio = {workspace = true}
thiserror = {workspace = true}
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = {workspace = true}

config = "0.14"
dirs = "5.0"
toml = "0.8"
env_logger = "0.10"
url = "2.5"

# Dependencies from kowalski-memory
rocksdb = "0.23"
qdrant-client = "1.14.0"
petgraph = "0.8"
rand = "0.9.1"
once_cell = "1.18" 