[package]
name = "kowalski-core"
version = "1.1.0"
edition = "2024"
description = "Kowalski Core Module: A Rust-based agent for interacting with Ollama models"
license = "MIT"
authors = ["yarenty <yarenty@gmail.com>"]
repository = "https://github.com/yarenty/kowalski"
homepage = "https://github.com/yarenty/kowalski"
readme = "README.md"
categories = [
    "network-programming",
    "text-processing",
    "science",
]
keywords = [
    "AI",
    "agent",
    "chat",
    "llm",
    "ollama",
]

[features]
default = []
## PostgreSQL: `sqlx` Postgres driver, **`pgvector`** (SQLx bindings), episodic/semantic SQL + migrations under `migrations/postgres/`.
postgres = [
    "sqlx/postgres",
    "dep:pgvector",
    "pgvector/sqlx",
]

[dependencies]
async-trait = {workspace = true}
futures = {workspace = true}
serde = { workspace= true,features = ["derive"] }
serde_json = {workspace = true}
reqwest = {workspace = true }
tokio = {workspace = true}
thiserror = {workspace = true}
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = {workspace = true}

config = "0.14"
dirs = "5.0"
toml = "0.8"
env_logger = "0.10"
url = "2.5"

# Dependencies from kowalski-memory
rand = "0.9.1"
once_cell = "1.18"

# Dependencies from kowalski-agent-template
bytes = "1.5"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
regex = "1.10"
markdown = "1.0"
llm_json = "1.0.2"
async-openai = { version = "0.32.4", features = ["native-tls", "chat-completion", "embedding"] }
async-stream = "0.3"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros", "tls-native-tls", "chrono"] }
pgvector = { version = "0.4", optional = true, default-features = false }

[dev-dependencies]
tempfile = "3.25.0"
axum = { workspace = true }
