[package]
name = "kowalski-data-agent"
version = "0.5.0"
edition = "2024"
description = "Kowalski Date Agent: A Rust-based agent for interacting with Ollama models"
license = "MIT"
authors = ["yarenty <yarenty@gmail.com>"]
repository = "https://github.com/yarenty/kowalski"
homepage = "https://github.com/yarenty/kowalski"
readme = "README.md"
categories = [
    "network-programming",
    "text-processing",
    "science",
]
keywords = [
    "AI",
    "agent",
    "chat",
    "llm",
    "ollama",
]


[dependencies]
kowalski-core = { path = "../kowalski-core", version = "0.5.0" }
kowalski-agent-template = { path = "../kowalski-agent-template", version = "0.5.0" }
kowalski-tools = { path = "../kowalski-tools", version = "0.5.0" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
markdown = { workspace = true }
env_logger = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
csv = "1.1"

[[example]]
name = "csv_analysis"
path = "examples/csv_analysis.rs"
