[package]
name = "kowalski-federation"
version = "0.3.0"
edition = "2024"
authors = ["yarenty <yarenty@gmail.com>"]
license = "MIT"
description = "Kowalski - agent of future AI"
repository = "https://github.com/yarenty/kowalski"
homepage = "https://github.com/yarenty/kowalski"
readme = "README.md"

[dependencies]
kowalski-core = { path = "../kowalski-core" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockall = "0.13"
wiremock = "0.26"

[features]
default = []
