[package]
name = "kowalski-federation"
version = {workspace = true}
edition = {workspace = true}
authors = {workspace = true}
license = {workspace = true}
readme = "README.md"

[dependencies]
kowalski-core = { path = "../kowalski-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }



[dev-dependencies]
mockall = "0.13"
wiremock = { version = "0.6.0-rc.3" }

[features]
default = []
