[package]
name = "kowalski-federation"
version = "0.5.0"
edition = "2024"
description = "Kowalski Federation: A Rust-based agent for interacting with Ollama models"
license = "MIT"
authors = ["yarenty <yarenty@gmail.com>"]
repository = "https://github.com/yarenty/kowalski"
homepage = "https://github.com/yarenty/kowalski"
readme = "README.md"
categories = [
    "network-programming",
    "text-processing",
    "science",
]
keywords = [
    "AI",
    "agent",
    "chat",
    "llm",
    "ollama",
]

[dependencies]
kowalski-core = { path = "../kowalski-core", version = "0.5.0" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }



[dev-dependencies]
mockall = "0.13"
wiremock = { version = "0.6.0-rc.3" }

[features]
default = []
