[package]
name = "kowalski-memory"
version = "0.5.1"
edition = "2024"
description = "Kowalski Memory Module: A Rust-based agent for interacting with Ollama models"
license = "MIT"
authors = ["yarenty <yarenty@gmail.com>"]
repository = "https://github.com/yarenty/kowalski"
homepage = "https://github.com/yarenty/kowalski"
readme = "README.md"
categories = [
    "network-programming",
    "text-processing",
    "science",
]
keywords = [
    "AI",
    "agent",
    "chat",
    "llm",
    "ollama",
]


[lib]
name = "kowalski_memory"
path = "src/lib.rs"

[dependencies]
# Tier 2: Episodic Buffer
rocksdb = "0.23"

# Tier 3: Semantic Store (Vector DB Client)
qdrant-client = "1.8"

# Tier 3: Semantic Store (In-Memory Graph)
petgraph = "0.8"

# Core Kowalski crates (assuming they will be needed)
# kowalski-core = { path = "../kowalski-core" }

# Async runtime and serialization
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# For test data generation
uuid = { version = "1.8.0", features = ["v4"], optional = true }

[features]
default = []
testing = ["dep:uuid"]
