[package]
name = "kowalski-memory"
version = "0.1.0"
edition = "2021"

[lib]
name = "kowalski_memory"
path = "src/lib.rs"

[dependencies]
# Workspace-inherited dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
uuid = { workspace = true, optional = true }
async-trait = { workspace = true }

# Crate-specific dependencies
rocksdb = "0.22.0"
qdrant-client = "1.8.0"
petgraph = "0.6.4"

[features]
default = []
testing = ["dep:uuid"]
