[package]
name = "kowalski-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.23"
lopdf = "0.36"
csv = "1.1"
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { version = "1.32", features = ["full"], workspace = true }
chrono = { workspace = true }
url = { workspace = true }
kowalski-core = { path = "../kowalski-core" }

[dev-dependencies]
mockall = "0.13"
wiremock = { version = "0.6.0-rc.3" }

[features]
default = []
web = []
pdf = []
data = []
code = []
