[package]
name = "kowalski-tools"
version = "0.5.0"
edition = "2024"
description = "Kowalski Tooling: A Rust-based agent for interacting with Ollama models"
license = "MIT"
authors = ["yarenty <yarenty@gmail.com>"]
repository = "https://github.com/yarenty/kowalski"
homepage = "https://github.com/yarenty/kowalski"
readme = "README.md"
categories = [
    "network-programming",
    "text-processing",
    "science",
]
keywords = [
    "AI",
    "agent",
    "chat",
    "llm",
    "ollama",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.23"
lopdf = "0.36"
csv = "1.1"
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
kowalski-core = { path = "../kowalski-core", version = "0.5.0" }

[dev-dependencies]
mockall = "0.13"
wiremock = { version = "0.6.0-rc.3" }

[features]
default = []
web = []
pdf = []
data = []
code = []
